[workspace]
resolver = "2"
members = [
  "core",
  "proc-macro",
  "transactor",
  "cli",
  "encryptor",
  "transport",
  "facade",
  "env",
  "client",
  "test",
  # "contracts/solana",
  "contracts/solana-types",
  "examples/draw-card",
  "examples/simple-settle",
  "examples/minimal",
  "examples/raffle",
  # "examples/blackjack",
  # "examples/roshambo",
  # "examples/chat",
]

[workspace.dependencies]
race-core = { path = "core", version = ">=0.0.7" }
race-proc-macro = { path = "proc-macro", version = ">=0.0.7" }
race-client = { path = "client", version = ">=0.0.7" }
race-encryptor = { path = "encryptor", version = ">=0.0.7" }
race-env = { path = "env", version = ">=0.0.7" }
race-test = { path = "test", version = ">=0.0.7" }
race-solana-types = { path = "contracts/solana-types", version = ">=0.0.7", default-features = false }
race-transport = { path = "transport", version = ">=0.0.7" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
syn = "1.0.107"
quote = "1.0.23"
anyhow = "1.0.64"
tokio = "1.27.0"
tokio-stream = "0.1.11"
jsonrpsee = "0.16.1"
tower-http = "0.3.4"
tower = "0.4.13"
hyper = "0.14.20"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
borsh = "0.9.3"
serde_json = "1.0.85"
serde = "1.0.144"
thiserror = "1.0.35"
wasmer = "3.0.2"
clap = "4.0.26"
arrayref = "0.3.6"
hex = "0.4.3"
async-stream = "0.3.3"
async-trait = "0.1.58"
futures = "0.3.25"
base64 = "0.21.0"
solana-program = "1.14.18"
solana-program-test = "1.14.18"
solana-client = "1.14.18"
solana-sdk = "1.14.18"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = "1.13.0"
shellexpand = "3.0.0"
getrandom = "0.2"
rand = "0.8.5"
toml = "0.5.9"
project-root = "0.2.2"
reqwest = "0.11.16"
openssl = { version = "^0.10" }
prettytable-rs = "^0.10"
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
aes = "0.8.2"
ctr = "0.9.2"
chrono = "0.4.24"
chacha20 = "0.9.1"
regex = "1"

[workspace.package]
authors = ["RACE Foundation <race.game.team@gmail.com>"]
version = "0.0.7"
edition = "2021"
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/RACE-Game/race"
documentation = "https://docs.rs/race"
homepage = "https://race-protocol.pages.dev"
keywords = ["blockchain"]
readme = "README.md"
