[workspace]
resolver = "2"
members = [
  "core",
  "api",
  "proc-macro",
  "transactor",
  "cli",
  "storage",
  "encryptor",
  "transport",
  "facade",
  "env",
  "client",
  "test",
  "local-db",
  "examples/minimal",
  "examples/draw-card",
  "examples/raffle",
  # "examples/simple-settle",
  # "examples/blackjack",
  # "examples/roshambo",
  # "examples/chat",
]

[workspace.dependencies]
race-api = { path = "api", version = ">=0.2.6" }
race-local-db = { path = "local-db", version = ">=0.2.6" }
race-proc-macro = { path = "proc-macro", version = ">=0.2.6" }
race-core = { path = "core", version = ">=0.2.6" }
race-client = { path = "client", version = ">=0.2.6" }
race-encryptor = { path = "encryptor", version = ">=0.2.6" }
race-test = { path = "test", version = ">=0.2.6" }
race-env = { path = "env", version = "*" }
race-transport = { path = "transport", version = "*" }
race-storage = { path = "storage", version = "*" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
syn = "1.0.107"
quote = "1.0.23"
anyhow = "1.0.64"
tokio = "1.27.0"
tokio-stream = "0.1.11"
jsonrpsee = "0.17.1"
tower-http = "0.4.4"
tower = "0.4.13"
hyper = "0.14.20"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-appender = "0.2.3"
borsh = { version = "1.5.1", features = ["derive"] }
serde_json = "1.0.85"
serde = "1.0.144"
thiserror = "1.0.35"
wasmer = "4.4.0"
clap = "4.0.26"
arrayref = "0.3.6"
hex = "0.4.3"
async-stream = "0.3.3"
async-trait = "0.1.58"
futures = "0.3.25"
base64 = "0.21.0"
solana-rpc-client = "2.0.8"
solana-rpc-client-api = "2.0.8"
solana-pubsub-client = "2.0.8"
solana-account-decoder = "2.0.8"
solana-sdk = "2.0.8"
solana-transaction-status = "2.0.8"
spl-token = "6.0.0"
spl-associated-token-account = "5.0.0"
shellexpand = "3.0.0"
getrandom = "0.2"
rand = "0.8.5"
toml = "0.5.9"
rusqlite = "0.32.0"
project-root = "0.2.2"
reqwest = "0.11.16"
openssl = { version = "^0.10" }
prettytable-rs = "^0.10"
# sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
sha2 = "0.10.8"
sha256 = "1.5.0"
aes = "0.8.2"
ctr = "0.9.2"
chrono = "0.4.24"
chacha20 = "0.9.1"
regex = "1"
infer = "0.15.0"
rs_merkle = "1.4.2"

[workspace.package]
authors = ["RACE Foundation <race.game.team@gmail.com>"]
version = "0.2.6"
edition = "2021"
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/RACE-Game/race"
documentation = "https://docs.rs/race"
homepage = "https://race-protocol.pages.dev"
keywords = ["blockchain"]
readme = "README.md"
