[workspace]
resolver = "2"
members = [
  "core",
  "api",
  "proc-macro",
  "transactor",
  "cli",
  "storage",
  "encryptor",
  "transport",
  "facade",
  "env",
  "client",
  "test",
  "local-db",
  "examples/minimal",
  # "examples/draw-card",
  "examples/raffle",
  # "examples/simple-settle",
  # "examples/blackjack",
  # "examples/roshambo",
  # "examples/chat",
]

[workspace.dependencies]
race-api = { path = "api", version = ">=0.2.6" }
race-local-db = { path = "local-db", version = ">=0.2.6" }
race-proc-macro = { path = "proc-macro", version = ">=0.2.6" }
race-core = { path = "core", version = ">=0.2.6" }
race-client = { path = "client", version = ">=0.2.6" }
race-encryptor = { path = "encryptor", version = ">=0.2.6" }
race-test = { path = "test", version = ">=0.2.6" }
race-env = { path = "env", version = "*" }
race-transport = { path = "transport", version = "*" }
race-storage = { path = "storage", version = "*" }

aes = "0.8.2"
anyhow = "1.0.64"
arrayref = "0.3.6"
async-stream = "0.3.3"
async-trait = "0.1.58"
base64 = "0.21.0"
borsh = { version = "1.5.1", features = ["derive"] }
bcs = "0.1.6"
chacha20 = "0.9.1"
chrono = "0.4.24"
clap = "4.0.26"
ctr = "0.9.2"
futures = "0.3.25"
getrandom = "0.2"
hex = "0.4.3"
hyper = "0.14.20"
infer = "0.15.0"
jsonrpsee = "0.17.1"
openssl = "^0.10"
prettytable-rs = "^0.10"
project-root = "0.2.2"
quote = "1.0.23"
rand = "0.8.5"
regex = "1"
reqwest = "0.11.16"
rs_merkle = "1.4.2"
rusqlite = "0.32.0"
serde = "1.0.215"
serde_json = "1.0.85"
sha2 = "0.10.8"
sha256 = "1.5.0"
shellexpand = "3.0.0"
signature = "2.2.0"
solana-account-decoder = "2.1.4"
solana-pubsub-client = "2.1.4"
solana-rpc-client = "2.1.4"
solana-rpc-client-api = "2.1.4"
solana-sdk = "2.1.4"
solana-transaction-status = "2.1.4"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }
syn = "1.0.107"
thiserror = "1.0.35"
time = "0.3.36"
tokio = "1.27.0"
tokio-stream = "0.1.11"
toml = "0.5.9"
tower = "0.4.13"
tower-http = "0.4.4"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
wasmer = "4.4.0"

[workspace.package]
authors = ["RACE Foundation <race.game.team@gmail.com>"]
version = "0.2.6"
edition = "2021"
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/RACE-Game/race"
documentation = "https://docs.rs/race"
homepage = "https://race-protocol.pages.dev"
keywords = ["blockchain"]
readme = "README.md"
