[package]
name = "race-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
race-core = { path = "../core" }
race-transport = { path = "../transport" }
race-env = { path = "../env" }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
clap = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["http-client"] }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
prettytable-rs = { workspace = true }
