[package]
name = "race-client-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
race-core = { path = "../core" }
race-encryptor = { path = "../encryptor" }
race-transport = { path = "../transport" }
anyhow = "1.0.64"
serde_json = "1.0.85"
serde = "1.0.144"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["Worker", "MessageEvent"] }
borsh = "0.9.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
