[package]
name = "race-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
tracing = "0.1.36"

[dev-dependencies]
race-test = { path = "../test" }
race-encryptor = { path = "../encryptor" }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
