[package]
name = "race-client"
description = "Client module for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { workspace = true }
race-transport = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
race-test = { workspace = true }
race-encryptor = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
