[package]
name = "race-core-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
borsh = "0.9.3"
async-trait = "0.1.58"

[dev-dependencies]
tokio = { version = "1.21.0", features = ["full"] }
