[package]
name = "race-core"
description = "RACE Protocol api types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
sha256.workspace = true
race-api.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
borsh.workspace = true
futures.workspace = true
rs_merkle.workspace = true
sui-sdk.workspace = true
signature.workspace= true
anyhow.workspace = true
bcs.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json"]
