[package]
name = "race-encryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
thiserror = "1.0.35"
sha1 = { version = "0.10.5", default-features = false, features = ["oid"] }
chacha20 = "0.9.0"
rsa = "0.5.0"
rand = "0.8.5"
hex = "0.4.3"
arrayref = "0.3.6"
chrono = "0.4.23"
tracing = "0.1.36"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
