[package]
name = "race-encryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
thiserror = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
arrayref = { workspace = true }
tracing = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
chrono = { workspace = true }
openssl = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
anyhow = { workspace = true }
