[package]
name = "race-encryptor"
description = "Encryptor module for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
arrayref = { workspace = true }
aes = { workspace = true }
chrono = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
chacha20 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
anyhow = { workspace = true }
