[package]
name = "race-env"
description = "Environment module for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
shellexpand = { workspace = true }
