[package]
name = "race-facade"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.58"
race-core = { path = "../core" }
thiserror = "1.0.35"
base64 = "0.21.0"
serde_json = "1.0.85"
serde = "1.0.144"
futures = "0.3.24"
anyhow = "1.0.64"
hyper = "0.14.20"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
jsonrpsee = { version = "0.16.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
tokio = { version = "1.21.0", features = ["full"] }
getrandom = { version = "0.2" }
