[package]
name = "race-facade"
version = "0.1.0"
edition = "2021"

[dependencies]
race-core = { path = "../core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jsonrpsee = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
tokio = { workspace = true, features = ["full"] }
getrandom = { workspace = true }
clap = { workspace = true, features = ["derive"] }
