[package]
name = "race-facade"
description = "Chain facade for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
race-api = { workspace = true, features =["serde"] }
race-core = { workspace = true, features = ["serde"] }
borsh.workspace = true
async-trait.workspace = true
thiserror.workspace = true
base64.workspace = true
serde_json.workspace = true
serde.workspace = true
futures.workspace = true
anyhow.workspace = true
hyper.workspace = true
tracing.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
tokio = { workspace = true, features = ["full"] }
getrandom.workspace = true
clap = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true, features = ["bundled"] }
regex.workspace = true
