[package]
name = "race-local-db"
description = "Module for save data to local database."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
race-core = { workspace = true }
race-api = { workspace = true }
race-transport = { workspace = true }
race-env = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
sha256 = { workspace = true }
