[package]
name = "race-mock-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
async-trait = "0.1.58"

[dev-dependencies]
tokio = { version = "1.21.0", features = ["full"] }
