[package]
name = "race-nft-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = [ "json"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
