[package]
name = "race-proc-macro"
description = "RACE Protocol proc macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
