[package]
name = "race-sdk"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
race-core = { path = "../core" }
race-client = { path = "../client" }
race-encryptor = { path = "../encryptor" }
race-transport = { path = "../transport" }
web-sys = { version = "0.3.60", features = ["Worker", "MessageEvent"] }
jsonrpsee = { version = "0.16.2", features = ["wasm-client"] }
gloo = "0.8.0"
anyhow = "1.0.64"
serde_json = "1.0.85"
serde = "1.0.144"
borsh = "0.9.3"
thiserror = "1.0.35"
futures = "0.3.25"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
async-stream = "0.3.3"
async-trait = "0.1.58"
base64 = "0.21.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
