[package]
name = "race-sdk"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
race-core = { path = "../core" }
race-client = { path = "../client" }
race-encryptor = { path = "../encryptor" }
race-transport = { path = "../transport" }
web-sys = { workspace = true, features = ["Worker", "MessageEvent"] }
jsonrpsee = { workspace = true, features = ["wasm-client"] }
getrandom = { workspace = true, features = ["js"] }
gloo = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
