[package]
name = "race-test"
version = "0.1.0"
edition = "2021"

[dependencies]
race-core = { path = "../core" }
race-client = { path = "../client" }
race-encryptor = { path = "../encryptor" }
borsh = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
