[package]
name = "race-test"
description = "Testkit for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
race-core = { workspace = true }
race-client = { workspace = true }
race-encryptor = { workspace = true }
borsh = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
anyhow = { workspace = true }
