[package]
name = "race-transactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
race-transport = { path = "../transport" }
race-env = { path = "../env" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
anyhow = "1.0.64"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
jsonrpsee = { version = "0.16.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
borsh = "0.9.3"
serde_json = "1.0.85"
serde = "1.0.144"
thiserror = "1.0.35"
wasmer = "3.0.2"
clap = { version = "4.0.26", features = ["derive"] }
arrayref = "0.3.6"
hex = "0.4.3"
log = "0.4.17"

[dev-dependencies]
race-test = { path = "../test" }
