[package]
name = "race-transactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../core" }
race-transport = { path = "../transport" }
race-encryptor = { path = "../encryptor" }
race-client = { path = "../client" }
race-env = { path = "../env" }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
jsonrpsee = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tower = { workspace = true, features = ["full"] }
hyper = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
borsh = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wasmer = { workspace = true }
clap = { workspace = true, features = ["derive"] }
arrayref = { workspace = true }
hex = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
race-test = { path = "../test" }
