[package]
name = "race-transport"
description = "Blockchain transport module for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
race-core = { workspace = true, features = ["serde"] }
race-env = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
borsh = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonrpsee = { workspace = true, features = ["wasm-client"]}
js-sys = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { workspace = true, features = ["http-client"]}
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }
race-solana-types = { path = "../contracts/solana-types", features = ["sdk"], default-features = false }
reqwest = { workspace = true, features = [ "json"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
shellexpand = { workspace = true }
project-root = { workspace = true }
