[package]
name = "race-transport"
description = "Blockchain transport module for RACE Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
race-api = { workspace = true, features = ["serde"] }
race-core = { workspace = true, features = ["serde"] }
race-env.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
borsh.workspace = true
jsonrpsee = { workspace = true, features = ["http-client"]}
async-stream.workspace = true
futures.workspace = true
tokio = { workspace = true, features = [ "sync"] }
solana-account-decoder.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-pubsub-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
sui_sdk.workspace = true
reqwest = { workspace = true, features = [ "json"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
shellexpand = { workspace = true }
project-root = { workspace = true }
