[package]
name = "race-solana-types"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
