[package]
name = "race-solana-types"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
spl-token = { workspace = true, features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["program"]
program = ["dep:solana-program"]
sdk = ["dep:solana-sdk"]
