[package]
name = "race-solana-types"
description = "Type definitions for Race Solana integration"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
solana-program = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
spl-token = { workspace = true, features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["program"]
program = ["dep:solana-program"]
sdk = ["dep:solana-sdk"]
