[package]
name = "race-solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
arrayref = { workspace = true }
race-solana-types = { path = "../solana-types" }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
