[package]
name = "race-solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"]}
spl-associated-token-account = { workspace = true }
race-solana-types = { path = "../solana-types", features = ["program"] }
borsh = { workspace = true }
arrayref = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
